# simple-rdp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MS-RDPBCGR.txt  README.md  example.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci-rle-fast.yml  ci-simple-rdp.yml  ci.yml  publish-rle-fast.yml  release-rle-fast.yml  release-simple-rdp.yml
docs/: index.md
docs/api/: client.md  display.md  input.md
docs/development/: contributing.md  performance.md  protocol.md
docs/examples/: automation.md  browser-viewer.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  testing.md
docs/guide/: keyboard-input.md  mcp-server.md  mouse-input.md  pointer.md  screen-capture.md
docs/includes/: abbreviations.md
examples/agents/google-adk/: adk_with_litellm.py  main.py
examples/browser/: README.md  app.js  index.html  server.py  style.css
rle-fast/: Cargo.toml  README.md  pyproject.toml
rle-fast/.github/workflows/: release.yml
rle-fast/src/: lib.rs
rust/src/: lib.rs
src/simple_rdp/: __init__.py  capabilities.py  client.py  credssp.py  display.py  input.py  mcs.py  pdu.py  rle.py  screen.py
src/simple_rdp/agentic_computer_use/: __init__.py  google_adk.py
src/simple_rdp_mcp/: __init__.py  server.py
tests/: test_capabilities.py  test_client.py  test_credssp.py  test_display.py  test_input.py  test_mcs.py  test_pdu.py  test_rle.py  test_screen.py
tests/e2e/: test_display.py  test_fps_limits.py  test_graphics.py  test_graphics_profiled.py  test_performance.py  test_performance_mouse.py  test_pointer_visibility.py  test_video_recording.py
