[project]
name = "simple-rdp"
version = "0.8.1"
description = "A Python RDP client for automation - exposes screen capture and input transmission"
readme = "README.md"
requires-python = ">=3.11, <4.0"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Rust", "Topic :: System :: Networking", "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",]
keywords = [ "rdp", "remote-desktop", "automation", "screen-capture",]
dependencies = [ "pyspnego>=0.12.0", "pyasn1>=0.6.2", "pillow>=12.1.0", "asn1crypto>=1.5.1", "python-dotenv>=1.0.0",]

[build-system]
requires = [ "maturin>=1.8,<2.0",]
build-backend = "maturin"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "fastmcp>=2.0.0",]
dev = [ "pytest>=8.0", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0", "ruff>=0.14.14", "mypy>=1.19.1", "pre-commit>=4.5.1", "rich>=14.3.1", "python-docx>=1.2.0",]
docs = [ "mkdocs>=1.6.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.26.0",]

[project.urls]
Homepage = "https://github.com/abi-jey/simple-rdp"
Repository = "https://github.com/abi-jey/simple-rdp"
Documentation = "https://abi-jey.github.io/simple-rdp/"

[project.scripts]
simple-rdp-mcp = "simple_rdp_mcp.server:run_server"

[tool.maturin]
python-source = "src"
module-name = "simple_rdp._rle"
include = [ "src/**/*.py",]
features = [ "pyo3/extension-module",]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
mypy_path = "src"
exclude = [ "tests/", "agents/", "examples/", "simple_rdp_mcp/",]
ignore_missing_imports = true

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B", "SIM",]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
asyncio_mode = "auto"

[tool.ruff.lint.isort]
force-single-line = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"

[tool.poetry.group.mcp.dependencies]
fastmcp = "^2.0.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.128.0"
maturin = ">=1.8.0"
pre-commit = "^4.5.1"

[tool.poetry.group.docs.dependencies.mkdocstrings]
extras = [ "python",]
version = "^1.0.2"
