[package]
name = "rle_fast"
version = "0.1.0"
edition = "2021"
description = "Fast RLE bitmap decompression for RDP"
license = "MIT"

[lib]
name = "rle_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
