[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rle-fast"
version = "0.1.0"
description = "Fast RLE bitmap decompression for RDP (Rust extension)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["rdp", "rle", "decompression", "bitmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yourusername/simple-rdp"
Repository = "https://github.com/yourusername/simple-rdp"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rle_fast"
